# flowers

./: .gitignore  LICENSE  README.md  flower_standalone.py  pyproject.toml  submit_train_and_validate.sh  train.sbatch
configs/: train_1-to-1.yaml  train_4-to-1.yaml  train_time-independent.yaml
configs/data/: MHD_256.yaml  MHD_64.yaml  acoustic_scattering_maze.yaml  active_matter.yaml  euler_multi_quadrants_periodicBC.yaml  gray_scott_reaction_diffusion.yaml  helmholtz_staircase.yaml  pdebench-2D_DarcyFlow.yaml  pdebench-diffusion_reaction.yaml  pdebench-shallow_water.yaml  planetswe.yaml  post_neutron_star_merger.yaml  rayleigh_benard.yaml  rayleigh_taylor_instability.yaml  shear_flow.yaml  supernova_explosion_128.yaml  supernova_explosion_64.yaml  turbulence_gravity_cooling.yaml  turbulent_radiative_layer_2D.yaml  turbulent_radiative_layer_3D.yaml  viscoelastic_instability.yaml  viscoelastic_instability_fixed.yaml  wavebench-helmholtz_anisotropic.yaml
configs/models/: fionet.yaml  flower.yaml  flower_medium.yaml  flower_small.yaml  fno.yaml  scot.yaml  unet_convnext.yaml
docs/: index.html
docs/static/css/: index.css
docs/static/js/: index.js  warp-canvas.js
flowers/: train.py  trainer.py  utils.py
flowers/data/: __init__.py  data_formatter.py  datamodule.py  dataset.py  normalization.py
flowers/models/: flower.py  flower_layers.py  fno.py  scOT.py  unet_convnext.py
flowers/models/utils/: __init__.py  common.py  grid_samples.py
scripts/: calculate_normalization_stats.py  convert_pdebench_to_well.py  download_pdebench_all.sh  download_the-well_data.py
